Add buckets in search req
