# api/http.swagger.json
@@ -79,6 +79,13 @@
             "required": false,
             "type": "string",
             "format": "int64"
+          },
+          {
+            "name": "buckets",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
           }
         ],
         "tags": [
