# controller/dbrainhub_search.go
@@ -16,8 +16,8 @@ import (
 )
 
 const (
-	DefaultSize    = 20
-	DefaultBuckets = 50
+	DefaultSize    int64 = 20
+	DefaultBuckets int64 = 50
 )
 
 func DbRainhubSearchMemberLogsWithCount(c *gin.Context, req api.SearchMemberLogCountRequest) (*api.SearchMemberLogCountResponse, error) {
@@ -46,7 +46,11 @@ func DbRainhubSearchMemberLogsWithCount(c *gin.Context, req api.SearchMemberLogC
 	}
 
 	// interval
-	interval := search_time.GetInterval(req.StartTime, req.EndTime, DefaultBuckets)
+	buckets := DefaultBuckets
+	if req.Buckets > 0 {
+		buckets = req.Buckets
+	}
+	interval := search_time.GetInterval(req.StartTime, req.EndTime, buckets)
 
 	var buf bytes.Buffer
 	query := map[string]interface{}{
